04-scaling/k8s/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-scaling-service
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
